--- a/css/widgets.css
+++ b/css/widgets.css
@@ -61,8 +61,8 @@
   border: none;
   border-radius: 6px;
   color: var(--text-color);
-  width: 32px;
-  height: 32px;
+  width: 28px;
+  height: 28px;
   display: flex;
   align-items: center;
   justify-content: center;
